Fix for ICE-2568 (XHTML: The <td> should not render a 'VALIGN' attribute [ice:gMap])

--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -2460,6 +2460,10 @@ Disabeld classes for the calendar controls
 }
 
 .iceGmp{}
+.iceGmpMapTd {
+    vertical-align: top;
+}
+
 .iceGmpMapTd div.gmap{
     width:600px;
     height:400px;
