--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp-portlet.css
@@ -2416,6 +2416,10 @@ Disabled classes for the calendar controls
 }
 
 .iceGmp{}
+.iceGmpMapTd {
+    vertical-align: top;
+}
+
 .iceGmpMapTd div.gmap{
     width:600px;
     height:400px;
