--- a/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
+++ b/icefaces/trunk/icefaces/core/src/com/icesoft/faces/resources/css/xp/xp.css
@@ -2480,6 +2480,10 @@ Disabled classes for the calendar controls
 }
 
 .iceGmp{}
+.iceGmpMapTd {
+	vertical-align: top;
+}
+
 .iceGmpMapTd div.gmap{
     width:600px;
     height:400px;
